--- a/index.html
+++ b/index.html
@@ -87,12 +87,11 @@
                   <div class="about">
                      <i class="fa fa-cogs"></i>
                      <h3>Summary</h3>
-                     <p>I'm a 21 year old Computer Science student currently studying an undergraduate degree at the University of Westminster.
+                     <p>I'm a 22 year old Computer Science student currently studying an undergraduate degree at the University of Westminster.
                         A fast learner and well qualified student who has studied IT at both secondary school, college, and now a university all specialising in Computing and Mathematics.
                         I've always had an interest in IT in fact some of my hobbies include gaming, mobile developing, and coding. 
                         As of late I've started to focus more so on my career prospects after university, as a result I've decided to create this portfolio to display
-                        to employers what I'm really capable of. 
-                        I also decided that keeping track and making use of my university work is ideal and with the use of a portfolio I'd be able to do so.
+                        to employers what I'm really capable of. I also decided that keeping track and making use of my university work is ideal and with the use of a portfolio I'd be able to do so.
                      </p>
                   </div>
                </div>
@@ -168,16 +167,18 @@
             <div class="row">
                <!-- Section header -->
                <div class="section-header text-center">
-                  <h2 class="title">Experience</h2>
+                  <h2 class="title">IT Experience</h2>
                </div>
                <!-- /Section header -->
                <!-- service -->
                <div class="col-md-4 col-sm-6">
                   <div class="education">
                      <i class="fa fa-diamond"></i>
-                     <h3>July 2014 | Teaching Assistant | Oak View</h3>
-                     <p>This was a work experience placement at Oak View primary school. I was tasked with assisting the pupils with reading, writing and numeracy during class. 
-                        This was an excellent opportunity to help others and gave me a great chance to show off my skills.
+                     <h3>Nov 2016㇑Digital Innovation Days㇑Oaklands College</h3>
+                     <p>This was a work experience opportunity in which I was put into a team that would come up with a 
+						solution for a pollution problem on a street in London. The solution was then presented to the members of 
+						Silicon Abbey. This opportunity allowed me to experience what it is like to work as part of a team on a 
+						project to a given deadline.
                      </p>
                   </div>
                </div>
@@ -186,10 +187,11 @@
                <div class="col-md-4 col-sm-6">
                   <div class="education">
                      <i class="fa fa-rocket"></i>
-                     <h3>June 2016 | Kitchen Porter | Beales Hotel</h3>
-                     <p>For this role I was given an opportunity to work for Beales Hotel. 
-                        Within this role I was in charge of maintaining the kitchen, this included basic food preparation, the ordering and organising of staff uniform, recycling and washing up. 
-                        This placement gave me the opportunity to develop my understanding of the workplace.
+                     <h3>Jul 2020㇑The Big Engineering Work Experience Week㇑University of Westminster</h3>
+                     <p>This was a week of exciting immersive talks, learning sessions and design activities. With speakers from 
+						global leading companies, organisations, and institutions such as ARUP, Google, Laing O’ Rourke, 
+						JOMAS. This gave me invaluable experience and an insight into the world of engineering for the built 
+						environment.
                      </p>
                   </div>
                </div>
@@ -198,10 +200,11 @@
                <div class="col-md-4 col-sm-6">
                   <div class="education">
                      <i class="fa fa-cogs"></i>
-                     <h3>February 2017 | Kitchen Porter | Tabure</h3>
-                     <p>Within this role I was provided with a chance to work alongside the Tabure restaurant. 
-                        The role included the maintenance of the kitchen, food preparation, washing up and recycling. 
-                        This placement allowed me to understand more about the workplace environment.
+                     <h3>May 2021㇑ServiceNow - Training and Hackathon㇑University of Westminster</h3>
+                     <p>The School of Computer Science and Engineering in collaboration with ServiceNow hosted a 3-day 
+						Application Development Training Programme followed by a 2-day Hackathon. During this work 
+						experience I gained valuable application development skills as well as industry knowledge and 
+						experience.
                      </p>
                   </div>
                </div>
@@ -210,10 +213,10 @@
                <div class="col-md-4 col-sm-6">
                   <div class="education">
                      <i class="fa fa-diamond"></i>
-                     <h3>April 2018 | Facilities Support 1 | Computacenter</h3>
-                     <p>This position tasked me with the upkeep of Computacenter headquarters. 
-                        The role included cleaning, warehouse work and the training of new recruits. 
-                        This opportunity gave me the chance to see my ideal work environment and helped motivate me to study Computer Science and Engineering at university.
+                     <h3>Jul 2021 | Summer School | George Mason University (US)</h3>
+                     <p>A two-week summer program in which I learnt how to build machine learning models using Python. 
+						The program ran virtually in partnership with George Mason University (US) between July 19th - 30th 2021.
+						A very insightful course which taught me a lot about using python for machine learning and ai.
                      </p>
                   </div>
                </div>
@@ -239,7 +242,7 @@
                <div class="col-sm-3 col-xs-6">
                   <div class="number">
                      <i class="fa fa-users"></i>
-                     <h3 class="white-text"><span class="counter">11</span></h3>
+                     <h3 class="white-text"><span class="counter">&#8734;</span></h3>
                      <span class="white-text">Qualifications</span>
                   </div>
                </div>
@@ -248,8 +251,8 @@
                <div class="col-sm-3 col-xs-6">
                   <div class="number">
                      <i class="fa fa-trophy"></i>
-                     <h3 class="white-text"><span class="counter">4</span></h3>
-                     <span class="white-text">Jobs</span>
+                     <h3 class="white-text"><span class="counter">&#8734;</span></h3>
+                     <span class="white-text">Hackathons</span>
                   </div>
                </div>
                <!-- /number -->
@@ -257,7 +260,7 @@
                <div class="col-sm-3 col-xs-6">
                   <div class="number">
                      <i class="fa fa-coffee"></i>
-                     <h3 class="white-text"><span class="counter">5</span></h3>
+                     <h3 class="white-text"><span class="counter">&#8734;</span></h3>
                      <span class="white-text">Projects</span>
                   </div>
                </div>
