--- a/index.html
+++ b/index.html
@@ -149,7 +149,12 @@
                      <tr>
                         <td>BSc </td>
                         <td>Computer Science</td>
+                        <td>(Predicted 1st)</td>
+                     </tr>
+					 <tr>
+                        <td>Westminster Employability Award </td>
                         <td>(N/A)</td>
+                        <td>Gold</td>
                      </tr>
                   </table>
                </div>
@@ -543,6 +548,7 @@ UPDATE Set_Order SET orderTotal = numSets * setPrice; </code>
                   </ul>
                   <!-- /footer follow -->
                </div>
+			   <p style="text-align:center;"> All photos taken by me. </p>
             </div>
             <!-- /Row -->
          </div>
